Fixed some issues reported by IntelliJ's code inspector